# ros2-proj-template-cpp

./: .gitignore  CMakeLists.txt  Makefile  package.xml  readme.md
scripts/: cmake-build-debug.sh  cmake-build.sh
src/: main.cpp  node1.cpp
